Margin alignement corrections made

--- a/src/scss/galleryComponent.scss
+++ b/src/scss/galleryComponent.scss
@@ -9,7 +9,8 @@
   header{
     margin: 0 0 20px 7%;
     padding-top: 7%;
-    padding-bottom: 20px;
+    padding-bottom: 20px; 
+    margin-left: 8%;
     color: #51e3c1;
     border-bottom: 2px solid #51e3c1;
     font-size: $fontsize-M;
