--- a/src/scss/timelinescreen.scss
+++ b/src/scss/timelinescreen.scss
@@ -6,7 +6,7 @@
     @include boxSize(100%,100%);
     .timeline-header{
         @include boxSize(85%,$timeline-header-height); 
-        @include margin('','','',$timeline-screen-margin);
+        @include margin('','','',8%);
         position: relative;
         border-bottom: 2px solid unquote("#"+nth($menuColors , 3 ));
         .timeline-heading{
